--- a/index.html
+++ b/index.html
@@ -4,17 +4,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dever Dificil</title>
-<style>
-    body {background-color: black; text-align: center;}
-
-</style>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital@0;1&display=swap" rel="stylesheet"> 
+    <title>Codar.</title>
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/header.css">
 </head>
 <body>
-        <section class = "center">
-            <h1 style="color:white">Davi Gomes</h1>
-            <a href="https://www.instagram.com/gomesdavi._/" style="color:white">Instagram</a>
-        </section>
-
+    <header class = "header">
+        <nav class = "navHeader">
+            <h1 class="titleHeader">Codar<span class="black">.</span></h1>
+            <div class = "divHeader" >
+                <a class="aHeader" href="">Início</a>
+                <a class="aHeader" href="">Serviços</a>
+                <a class="aHeader" href="">Contato</a>
+                <button class="buttonHeader">Login</button>
+            </div>
+        </nav>
+    </header>
 </body>
 </html>
