--- a/desmedio.html
+++ b/desmedio.html
@@ -9,14 +9,14 @@
 </head>
 <body>
     <header >
-        <nav >
-            <h1 >Codar<span>.</span></h1>
-            <div  >
-                <a href="">Início</a>
-                <a href="">Serviços</a>
-                <a href="">Contato</a>
-                <button>Login</button>
-            </div>
+            <h1>Codar<span>.</span></h1>
+        <nav>
+            <ul>
+                <li><a href="">Início</a></li>
+                <li><a href="">Serviços</a></li>
+                <li><a href="">Contato</a></li>
+                <li><button>Login</button></li>
+            </ul>
         </nav>
     </header>
 </body>
